packages/voltaire-c/include/voltaire.h

/* ============================================================================
 * Primitives Error Codes
 * ========================================================================= */

#define PRIMITIVES_SUCCESS              0
/* ============================================================================
 * Types
 * ========================================================================= */

typedef struct {
    unsigned char bytes[20];
} PrimitivesAddress;
typedef struct {
    unsigned char bytes[32];
} PrimitivesHash;
typedef struct {
    unsigned char bytes[32];
} PrimitivesU256;
/* ============================================================================
 * Address API
 * ========================================================================= */

int primitives_address_from_hex(const char* hex, PrimitivesAddress* out);
int primitives_address_to_hex(const PrimitivesAddress* address, unsigned char* buf);
int primitives_address_to_checksum_hex(const PrimitivesAddress* address, unsigned char* buf);
bool primitives_address_is_zero(const PrimitivesAddress* address);
bool primitives_address_equals(const PrimitivesAddress* a, const PrimitivesAddress* b);
bool primitives_address_validate_checksum(const char* hex);
int primitives_calculate_create_address(const PrimitivesAddress* sender, uint64_t nonce, PrimitivesAddress* out);
/* ============================================================================
 * Hash API
 * ========================================================================= */

int primitives_keccak256(const unsigned char* data, size_t data_len, PrimitivesHash* out_hash);
int primitives_hash_to_hex(const PrimitivesHash* hash, unsigned char* buf);
int primitives_hash_from_hex(const char* hex, PrimitivesHash* out_hash);
bool primitives_hash_equals(const PrimitivesHash* a, const PrimitivesHash* b);
int primitives_eip191_hash_message(const unsigned char* message, size_t message_len, PrimitivesHash* out_hash);
int primitives_sha256(const unsigned char* data, size_t data_len, unsigned char out_hash[32]);
int primitives_ripemd160(const unsigned char* data, size_t data_len, unsigned char out_hash[20]);
/* ============================================================================
 * Hex API
 * ========================================================================= */

int primitives_hex_to_bytes(const char* hex, unsigned char* out_buf, size_t buf_len);
int primitives_bytes_to_hex(const unsigned char* data, size_t data_len, unsigned char* out_buf, size_t buf_len);
int primitives_u256_from_hex(const char* hex, PrimitivesU256* out_u256);
int primitives_u256_to_hex(const PrimitivesU256* value, unsigned char* buf, size_t buf_len);
/* ============================================================================
 * secp256k1 API
 * ========================================================================= */

int primitives_secp256k1_recover_pubkey(const unsigned char message_hash[32], const unsigned char r[32], const unsigned char s[32], unsigned char v, unsigned char out_pubkey[64]);
int primitives_secp256k1_recover_address(const unsigned char message_hash[32], const unsigned char r[32], const unsigned char s[32], unsigned char v, PrimitivesAddress* out_address);
int primitives_secp256k1_pubkey_from_private(const unsigned char private_key[32], unsigned char out_pubkey[64]);
bool primitives_secp256k1_validate_signature(const unsigned char r[32], const unsigned char s[32]);